--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 attrs==16.0.0
 cffi==1.7.0
 cryptography==1.4
+cssselect==1.0.1
 dj-database-url==0.3.0
 Django==1.8.1
 django-postgrespool==0.3.0
@@ -10,17 +11,22 @@ gunicorn==19.3.0
 httplib2==0.9.2
 idna==2.1
 ipaddress==1.0.16
+lxml==3.7.3
 numpy==1.12.0
 oauth2client==2.0.1
 pandas==0.19.2
+parsel==1.1.0
 psycopg2==2.6
 pyasn1==0.1.9
 pyasn1-modules==0.0.8
 pycparser==2.14
+PyDispatcher==2.0.5
 pyOpenSSL==16.0.0
 python-dateutil==2.6.0
 pytz==2016.10
+queuelib==1.4.2
 rsa==3.3
+Scrapy==1.3.3
 service-identity==16.0.0
 simplejson==3.8.2
 six==1.10.0
