--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pyasn1==0.1.9
 pyasn1-modules==0.0.8
 pycparser==2.14
 PyDispatcher==2.0.5
+pymongo==3.4.0
 pyOpenSSL==16.0.0
 python-dateutil==2.6.0
 pytz==2016.10
